--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 					<a class="dropdown-link" href="https://lambdaschool.com/" target="_blank">Lambda</a>
 					<a class="dropdown-link" href="https://www.google.com/" target="_blank">Google</a>
 					<a class="dropdown-link" href="https://developer.mozilla.org/en-US/" target="_blank">MDN</a>
+					<a class="dropdown-link" href="https://developer.mozilla.org/en-US/" target="_blank">Party</a>
+					<a class="dropdown-link" href="https://developer.mozilla.org/en-US/" target="_blank">Dino</a>
+					<a class="dropdown-link" href="https://developer.mozilla.org/en-US/" target="_blank">Rules</a>
 				</div>
 			</div>
 			<img src="./lambda_logo_light_small.png" class="header" />
@@ -38,6 +41,9 @@
 						<div class="tabs-link" data-tab="2">Tab 2</div>
 						<div class="tabs-link" data-tab="3">Tab 3</div>
 						<div class="tabs-link" data-tab="4">Tab 4</div>
+						<div class="tabs-link" data-tab="5">Tab A</div>
+						<div class="tabs-link" data-tab="6">Tab B</div>
+						<div class="tabs-link" data-tab="7">Tab C</div>
 					</div>
 					<div class="tabs-items">
 						<div class="tabs-item tabs-item-selected" data-tab="1">
@@ -66,6 +72,30 @@
 						</div>
 						<div class="tabs-item" data-tab="4">
 							<div class="tabs-item-title">Quote 4</div>
+							<div class="tabs-item-description">
+								There is a theory which states that if ever anyone discovers exactly what the Universe is for and why it is here, it will
+								instantly disappear and be replaced by something even more bizarre and inexplicable. There is another theory which states
+								that this has already happened.
+							</div>
+						</div>
+						<div class="tabs-item" data-tab="5">
+							<div class="tabs-item-title">Quote A</div>
+							<div class="tabs-item-description">
+								There is a theory which states that if ever anyone discovers exactly what the Universe is for and why it is here, it will
+								instantly disappear and be replaced by something even more bizarre and inexplicable. There is another theory which states
+								that this has already happened.
+							</div>
+						</div>
+						<div class="tabs-item" data-tab="6">
+							<div class="tabs-item-title">Quote B</div>
+							<div class="tabs-item-description">
+								There is a theory which states that if ever anyone discovers exactly what the Universe is for and why it is here, it will
+								instantly disappear and be replaced by something even more bizarre and inexplicable. There is another theory which states
+								that this has already happened.
+							</div>
+						</div>
+						<div class="tabs-item" data-tab="7">
+							<div class="tabs-item-title">Quote C</div>
 							<div class="tabs-item-description">
 								There is a theory which states that if ever anyone discovers exactly what the Universe is for and why it is here, it will
 								instantly disappear and be replaced by something even more bizarre and inexplicable. There is another theory which states
